2005-03-30 Toady <toady@gscore.org>

	* src/beam.c: Fixed bug when the last note selected you want to beam is the last in the list
	
2005-03-27 Toady <toady@gscore.org>

	* plugins/abc/export-abc.c: Improved chords support
	* src/mouse_event.c: Improved objects on staff selection
	* src/objects.c: Improved movements within score to avoid issues with chords
	
2005-03-25 Toady <toady@gscore.org>

	* src/objects_callbacks.c: Sets/Uset stuff on objects selected
	* src/staff.c, src/score.c: Make dialog boxes work using gobjects
	* plugins/abc/export-abc.c: Chords support
	
2005-03-24 Toady <toady@gscore.org>

	* src/objects.c, src/key_event.c: Full insertiong working
	
2005-02-08 Toady <toady@gscore.org>

	* src/objects.c, src/key_event.c: Basic object insertion working

2005-02-08 Toady <toady@gscore.org>

	* src/score.c: fixed bug that would not initialize the id given to object value
	* src/key_event.c: improved object insertion

2005-02-06 Cheyenne <j.marrec@10pouces.org>

	*  src/score.[ch]: new  functions  to retrieve  data  from the  active
	widget
	* src/*.c: suppressed global variables to enable multiple document interface
	(see http://www.gscore.org/pipermail/gscore-devel/2005-February/000019.html)

2005-01-20 toady <toady@gscore.org>

	* src/draw.c: don't render notes which are not displayed on screen (yadh)
	* src/key_event.c, src/realize_area.c: basic chords support
	
2005-01-13 toady <toady@gscore.org>

	* src/realize_area.c: Fixed bug #2870
	
2005-01-11 toady <toady@gscore.org>

	* src/file.c: Fixed bug #3025, reported by Jerome Marrec
	
2005-01-05 toady <toady@gscore.org>

	* src/mouse_event.c: Fixed bug pointed by Raymond Ostertag. Notes selected even if the cursor is not selected.
	
2004-12-17 toady <toady@gscore.org>
     
	* SConstruct: Applied patch from Julien Salort for better prefixing <julien.salort ens-lyon fr>
	
2004-12-15 toady <toady@gscore.org>

	Release of 0.0.8: laetmotive.